# ai-cpp-tester

./: CMakeLists.txt  LICENSE  agent.py  ai-cpp-tester.py  ai.test.cmake  cli_progress_bar.py  cpp.embedding.py  cpp.index.py  dsl.py  embedding.py  search.py  system.prompt  test.py
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  box.cpp  box.hpp  box.test.txt  fruit.hpp
